k8s-related/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  # annotatio here for classname and clusterissuer 
spec:
  rules:
  - host: nginx-k8s-demo.devnerd.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
